<resources>
    <string name="app_name">Bookkeeper</string>
    <string name="action_login">Login</string>
    <string name="str_copyright" translatable="false">© %s, Bookkeeper</string>
    <string name="str_version" translatable="false">Version %s</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="err_empty_email">Please, enter email</string>
    <string name="err_invalid_email">Please, enter valid email</string>
    <string name="err_empty_password">Please, enter password</string>
    <string name="title_activity_accounting">AccountingActivity</string>

    <string name="dialog_logout_title">Logout</string>
    <string name="dialog_logout_message">Do you really want to logout?</string>
    <string name="btn_confirm">Confirm</string>
    <string name="btn_cancel">Cancel</string>

    <string name="action_retry_loading">Retry</string>

    <string name="msg_no_accounts">No accounts found</string>
    <string name="msg_operation_successful">Operation successful</string>
    <string name="action_add_association">Add association</string>
    <string name="action_remove_association">Remove association</string>
    <string name="action_edit_association">Edit association</string>

    <string name="association_sender">Sender: %s</string>
    <string name="association_template">Template: %s</string>

    <string name="err_association_removal_failed">Association removal failed</string>
    <string name="err_association_adding_failed">Association adding failed</string>
    <string name="err_association_editing_failed">Association editing failed</string>
    <string name="err_unable_to_get_sms">Unable to get sms</string>
    <string name="err_unable_to_get_unprocessed_sms_count">Unable to get unprocessed sms count</string>
    <string name="err_unable_to_get_conversations">Unable to get conversations</string>
    <string name="err_no_permissions">No permissions granted. Unable to proceed to sms handling</string>

    <string name="msg_select_sms_sender">Please, select SMS sender from the list:</string>

    <string name="toolbar_title_accounts">Accounts</string>
    <string name="toolbar_title_messages_status">Messages Status</string>
    <string name="toolbar_title_settings">Settings</string>
    <string name="hint_paste_template">Paste sms template here (optional)</string>

    <string name="msg_service_notification_sms_processing">SMS processing</string>
    <string name="msg_service_pending_sms">%d sms are pending</string>
    <string name="msg_service_notification_waiting_for_messages">Waiting for incoming sms and push notifications</string>
    <string name="msg_service_notification_running">SMS processing service running</string>

    <string name="msg_sms_status_pending_sms_count">%d sms are pending, press button to send now</string>
    <string name="msg_sms_status_server_unprocessed_count">Unprocessed messages count: %d</string>
    <string name="msg_sms_status_server_unprocessed_count_unknown">Unprocessed messages count: unknown</string>

    <string name="msg_push_status_pending_push_count">%d pushes are pending, press button to send now</string>
    <string name="msg_push_status_server_unprocessed_count">Unprocessed push count: %d</string>
    <string name="msg_push_status_server_unprocessed_count_unknown">Unprocessed push count: unknown</string>

    <string name="msg_sms_status_server_unprocessed_response_date_time">Last successful update: %s</string>
    <string name="msg_sms_status_no_pending_sms">No pending sms</string>
    <string name="msg_push_status_no_pending_pushes">No pending push notifications</string>
    <string name="msg_sms_status_account_subaccount_info">Account: %s, subaccount: %s</string>

    <string name="notification_service_label" translatable="false">Notification Service</string>
    <string name="notification_service_running">Service is running</string>

    <string name="notification_listener_service_title">Notification Listener Service</string>
    <string name="notification_listener_service_explanation">To be able to process push notifications you need to enable the Notification Listener Service. Enable it now?</string>
    <string name="association_type_push">Push Notification</string>
    <string name="association_type_sms">SMS</string>
    <string name="association_type_push_description">Associate Push Notification</string>
    <string name="association_type_sms_description">Associate SMS</string>
    <string name="toolbar_title_association_type">Association Type</string>

    <string name="toolbar_title_associating_sms">Associate SMS</string>
    <string name="toolbar_title_associating_push">Associate Push Notifications</string>
    <string name="hint_push_package_name">Push notification sender (application name) </string>
    <string name="hint_push_content_template">Push notification text template (optional)</string>
    <string name="push_package_invalid_name">Incorrect push notification sender app name</string>

    <string name="menu_settings">Settings</string>
    <string name="settings_header_debug">Debug Settings</string>
    <string name="settings_debug_push_label">Send push notifications for debug</string>
    <string name="settings_debug_push_help">When enabled, all incoming push notifications will be sent to the backend for debugging</string>
    <string name="settings_push_delay_header">Push Notification Processing</string>
    <string name="settings_push_delay_label">Delay: %d seconds</string>
    <string name="settings_push_delay_help">Delay push notifications to prioritize SMS processing (applies to both new and queued messages). Set to 0 for no delay.</string>

</resources>