<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/content_default_padding">

    <LinearLayout
        android:id="@+id/container_sms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            style="@style/DefaultHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/association_type_sms" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/association_type_sms_description" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_push"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            style="@style/DefaultHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/association_type_push" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/association_type_push_description" />
    </LinearLayout>

</LinearLayout>
